# render_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  resource_file.qrc
src/cameras/: camera.cpp  camera.h
src/core/: api.cpp  api.h  dfl.h  geometry.h  hittable.cpp  hittable.h  hittable_list.h  material.h  point3d.cpp  point3d.h  ray.h  render_thread.cpp  render_thread.h  scene.cpp  scene.h  sphere.h  vector3d.cpp  vector3d.h
src/gui/: main_window.cpp  main_window.h  render_options_widget.cpp  render_options_widget.h  render_widget.cpp  render_widget.h
src/main/: main.cpp
src/tests/: main.cpp  performance_test.cpp  test.cpp  vector3d_tests.cpp
